--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>20201213</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
