[RegSys] Dockerize app

--- a/src/main/frontend/Dockerfile
+++ b/src/main/frontend/Dockerfile
@@ -1,13 +1,12 @@
-FROM NODE:13.0-alpine
-WORKDIR /react/app
+FROM node
+WORKDIR /app
 
-ENV PATH /react/app/node_modules/.bin:$PATH
+ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
 
 COPY . ./
-RUN npm start
+CMD [ "npm", "start" ]
