--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   reg-service:
+    image: reg-service
     build:
       context: .
       dockerfile: Dockerfile
@@ -9,49 +10,55 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./main:/main/app
+      - spring:/app/
     depends_on:
       - db
-    labels:
-      com.docker.devenvironments.compose: "true"
-      com.docker.devenvironments.compose.build: "true"
-      com.docker.devenvironments.name: reg-service
   db:
     image: postgres:11
     restart: always
     environment:
-      MYSQL_DATABASE: regsystem
+      POSTGRES_DB: regsystem
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: oros
     ports:
       - 41000:5432
-    - volumes:
-        - '/var/lib/postgres'
-    labels:
-      com.docker.devenvironments.compose: "true"
-      com.docker.devenvironments.name: postgresDB
+    volumes:
+        - dbdata:/var/lib/postgres/data
     networks:
       - microservice
-  react-UI:
+  react:
+    image: react-frontend
     build:
       context: src/main/frontend
       dockerfile: Dockerfile
-      environment:
-        - CHOKIDAR_USEPOLLING=true
-      networks:
-        - microservice
-      ports:
-        - 8002:3000
-      volumes:
-        - ./react-ui2:/react/app
-        - '/react/app/node_modules'
+    networks:
+      - microservice
+    ports:
+      - 3000:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - react:/app
+      - '/app/node_modules'
+
+  mailserver:
+    image: maildev/maildev
+    ports:
+      - 1025:25
+      - 1080:80
+    networks:
+      - microservice
+
 volumes:
   dbdata:
-    name: microservice_dbdata
+    name: postgres_dbdata
+  spring:
+    name: spring_backend
+  react:
+    name: react_frontend
 
 networks:
-  default:
+  microservice:
     name: microservice
-    driver: bridge
 
 
